--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Deepak Kumar, PMP®</h1>
         <p>Project Manager | SAFe Certified | Expertise in New Product Development & Launch</p>
-        <img src="./assets/images/mypic.jpg" alt="Profile Photo" style="width:150px;height:150px;">
+        <img src="./assets/images/mypic.JPG" alt="Profile Photo" style="width:150px;height:150px;">
     </header>
 
     <section>
